# ethitorial

./: .dockerignore  .env.example  .gitignore  .mcp.json.example  AGENTS.md  DESIGN.md  PRODUCT.md  README.md  WSL_PERFORMANCE_HANDOFF.md  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  skills-lock.json
.claude/: settings.json
.claude/hooks/: auto-commit-roadmap.sh
.claude/skills/: eptmx  operate-planning-board  write-as-me
.codex/: config.toml.example
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: deploy.yml  pr-checks.yml
.impeccable/: design.json
.impeccable/critique/: 2026-06-07T01-48-36Z__apps-web-app-components-home-landing-tsx.md
.write-as-me/profiles/: me.md
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260612152918_initial_engagement_schema.py  20260612160243_identity_auth_schema.py  20260612202000_fix_engagement_user_id_to_text.py
apps/api/src/epistemix/: __init__.py  db.py  main.py
apps/api/src/epistemix/engagement/: comments.py  models.py  views.py  votes.py
apps/api/src/epistemix/identity/: dependencies.py
apps/api/src/ethitorial/: __init__.py  main.py
apps/api/src/ethitorial/engagement/: comments.py  models.py  views.py  votes.py
apps/api/src/ethitorial/identity/: dependencies.py  models.py
apps/api/tests/: test_comments.py  test_health.py  test_identity.py  test_migration.py  test_views.py  test_votes.py
apps/web/: Dockerfile  instrumentation.test.ts  instrumentation.ts  next.config.ts  package.json  (+1 more)
content/: sections.yml  tags.yml
docs/: ARCHITECTURE.md  CONTEXT.md  DESIGN.md  ROADMAP.md  VISION.md
scripts/: run-mcp-with-env.mjs
(+262 files in other folders)
